Remove touch exploration corner pass through and screen enter/exit earcons

Bug: 869921, 854321,869955
Change-Id: I9d9ae5aa5c590cf0200e6953054dff1833fc7b76
Reviewed-on: https://chromium-review.googlesource.com/1161176
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580666}
Former-commit-id: dd98e27d135a2c693b7988113e40f67002c40a63